--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ro">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta
             name="description"
             content="Comprehensive assistance system that brings traffic safety to the next level. It is meant to help you drive safer, thus protecting both you and those around you. Follow us for more details."
@@ -55,8 +56,12 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
         />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+        />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script type="text/javascript" src="jquery.mkinfinite.js"></script>
+        <script src="jquery.mkinfinite.js"></script>
         <title>SafeWay - ITnovation</title>
     </head>
     <body>
@@ -81,8 +86,7 @@
                     ><i class="fa fa-envelope"></i
                 ></a>
             </div>
-            <!-- <a href="#" class="language" onclick="changeLanguage()">Română</a> -->
-            <p class="motto">Viitorul siguranței rutiere vă așteaptă</p>
+            <h2 class="motto">Viitorul siguranței rutiere vă așteaptă</h2>
             <p class="under-motto">
                 Noi vă protejăm cât timp dumneavoastră conduceți.
             </p>
@@ -114,7 +118,7 @@
                 ></a>
             </div>
             <img src="images/phone.PNG" alt="phone" />
-            <div class="text-1">
+            <div class="text-1 js--wp-1">
                 <h3 class="text-1-header">Sistem de siguranță avansat</h3>
                 <p class="text-1-p">
                     SafeWay este un sistem de siguranță amplu menit să vă ajute
@@ -127,7 +131,7 @@
                     trafic la un cu totul alt nivel.
                 </p>
             </div>
-            <div class="text-2">
+            <div class="text-2 js--wp-2">
                 <h3 class="text-2-header">
                     Disponibil pentru oricine din România
                 </h3>
@@ -140,7 +144,7 @@
                     care lumea are nevoie!
                 </p>
             </div>
-            <div class="text-3">
+            <div class="text-3 js--wp-3">
                 <h3 class="text-3-header">Fără riscuri</h3>
                 <p class="text-3-p">
                     SafeWay este foarte bine optimizat, riscurile fiind 0.
@@ -151,7 +155,7 @@
                     lumea aceasta.
                 </p>
             </div>
-            <div class="text-4">
+            <div class="text-4 js--wp-4">
                 <h3 class="text-4-header">Nu sunteți siguri?</h3>
                 <p class="text-4-p">
                     La fiecare final de săptămână vom prezenta câte o
@@ -176,7 +180,7 @@
                 >
                     <div class="row">
                         <div class="col-25">
-                            <label for="fname" id="name-label">Nume</label>
+                            <label for="name" id="name-label">Nume</label>
                         </div>
                         <div class="col-75">
                             <input
@@ -189,7 +193,7 @@
                     </div>
                     <div class="row">
                         <div class="col-25">
-                            <label for="lname" id="email-label">Email</label>
+                            <label for="email" id="email-label">Email</label>
                         </div>
                         <div class="col-75">
                             <input
@@ -274,6 +278,7 @@
             </div>
         </section>
 
+        <script src="jquery.waypoints.min.js"></script>
         <script>
             /* SCROLL ON NAVIGATION */
             // Select all links with hashes
@@ -320,7 +325,7 @@
                     }
                 });
         </script>
-        <script type="text/javascript">
+        <script>
             $(document).ready(function () {
                 $(".title-section").mkinfinite({
                     maxZoom: 1.3,
@@ -329,16 +334,15 @@
                     isFixedBG: true,
                     zoomIn: true,
                     imagesList: new Array(
-                        "./slideshow/1.jpg",
-                        "./slideshow/2.jpg",
-                        "./slideshow/3.jpg",
-                        "./slideshow/4.jpg",
-                        "./slideshow/5.jpg",
-                        "./slideshow/6.jpg",
-                        "./slideshow/7.jpg",
-                        "./slideshow/8.jpg",
-                        "./slideshow/9.jpg",
-                        "./slideshow/10.jpg"
+                        "./slideshow_1080p/1.jpg",
+                        "./slideshow_1080p/2.jpg",
+                        "./slideshow_1080p/3.jpg",
+                        "./slideshow_1080p/4.jpg",
+                        "./slideshow_1080p/5.jpg",
+                        "./slideshow_1080p/6.jpg",
+                        "./slideshow_1080p/7.jpg",
+                        "./slideshow_1080p/8.jpg",
+                        "./slideshow_1080p/9.jpg"
                     ),
                 });
             });
@@ -346,7 +350,6 @@
         <script>
             function changeLanguage() {
                 // title section
-                // languageEl = document.querySelector(".language");
                 mottoEl = document.querySelector(".motto");
                 underMottoEl = document.querySelector(".under-motto");
                 appEl = document.querySelector(".app");
@@ -383,7 +386,6 @@
 
                 if (footerLanguageEl.textContent === "English") {
                     // title section
-                    // languageEl.textContent = "Română";
                     mottoEl.textContent =
                         "Viitorul siguranței rutiere vă așteaptă";
                     underMottoEl.textContent =
@@ -428,7 +430,6 @@
                     sendBtnEl.value = "Trimite";
                 } else {
                     // title section
-                    // languageEl.textContent = "English";
                     mottoEl.textContent =
                         "Welcome to the future of safe driving";
                     underMottoEl.textContent =
@@ -484,6 +485,54 @@
                         }
                     },
                     "jsonp"
+                );
+            });
+        </script>
+        <script>
+            $(document).ready(function () {
+                /* ANIMATIONS ON SCROLL */
+                $(".app-header").waypoint(
+                    function (direction) {
+                        $(".js--wp-1").addClass(
+                            "animate__animated animate__fadeInUp"
+                        );
+                    },
+                    {
+                        offset: "60%",
+                    }
+                );
+
+                $(".js--wp-1").waypoint(
+                    function (direction) {
+                        $(".js--wp-2").addClass(
+                            "animate__animated animate__fadeInUp"
+                        );
+                    },
+                    {
+                        offset: "70%",
+                    }
+                );
+
+                $(".js--wp-2").waypoint(
+                    function (direction) {
+                        $(".js--wp-3").addClass(
+                            "animate__animated animate__fadeInUp"
+                        );
+                    },
+                    {
+                        offset: "60%",
+                    }
+                );
+
+                $(".js--wp-3").waypoint(
+                    function (direction) {
+                        $(".js--wp-4").addClass(
+                            "animate__animated animate__fadeInUp"
+                        );
+                    },
+                    {
+                        offset: "60%",
+                    }
                 );
             });
         </script>
